# Phantom

./: CMakeLists.txt  README  main.cpp
PhantomTests/: CMakeLists.txt  TestingMain.cpp
Shaders/: vertex_shader.glsl
Source/Private/: Engine.cpp  Sprite.cpp  Vector3.cpp
Source/Public/: Engine.h  Logger.h  Sprite.h  Vector3.h
